--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -17,7 +17,8 @@
               <form autocomplete="off" [formGroup]="form" (ngSubmit)="onSubmit(form)" class="text-left mt-4">
                 <fieldset>
                   <p>
-                    We will send you a verification code on your registered mobile number
+                    Enter your registered email below and click 'Get Code'. We will send you a verification code on your
+                    registered mobile number
                   </p>
 
 
