--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -4,7 +4,7 @@
 
       <div class="widget-controls row">
         <div class="col-sm-6">
-          <a class="btn btn-info btn-sm mb-1" routerLink="/users/create"><i class="fa fa-plus"></i> Add Store User</a>
+          <a class="btn btn-info btn-md mb-1" routerLink="create"><i class="fa fa-plus"></i> Add Store User</a>
 
         </div>
         <div class="col-sm-2"></div>
