--- a/src/app/pages/internal-users/create/create.component.html
+++ b/src/app/pages/internal-users/create/create.component.html
@@ -28,7 +28,7 @@
             <div class="col-md-1"></div>
             <h4 class="col-md-11">Adding Internal User</h4>
           </div>
-          <hr>
+
           <div class="row">
 
 
@@ -86,17 +86,7 @@
                     Name should be at most 45 characters</small>
                 </div>
               </div>
-              <!---- <div class="row form-group">
 
-                            <label class="control-label col-sm-3" for="inputName">User Name</label>
-                                                         <div class="col-sm-7">
-                            <input formControlName="userName" class="form-control validation-field" placeholder="User Name" type="text">
-                            <small class="text-danger" *ngIf="userFormAdd.get('userName').touched && userFormAdd.get('userName').hasError('required')">User Name is required</small>
-                            <small class="text-danger" *ngIf="userFormAdd.get('userName').touched && userFormAdd.get('userName').hasError('pattern')">Invalid User Name</small>
-                            <small class="text-danger" *ngIf="userFormAdd.get('userName').touched && userFormAdd.get('userName').hasError('minlength')">Last Name should be at least 3 characters</small>
-                            <small class="text-danger" *ngIf="userFormAdd.get('userName').touched && userFormAdd.get('userName').hasError('maxlength')">Last Name should be at most 45 characters</small>
-                        </div>
-                    </div>-->
               <div class="row form-group">
 
                 <label class="control-label col-sm-3" for="inputName">Email</label>
@@ -197,15 +187,12 @@
               </div>
 
 
-              <!---   <div class="row align-roles-right">
-                    <button [disabled]="!userFormAdd.valid" class="btn btn-danger" type="submit">Submit</button>
-                </div>-->
               <div class="row form-group">
                 <div class="col-sm-3"></div>
                 <div class="col-sm-7">
                   <div class="float-right ">
                     <button class="btn btn-danger " type="cancel" style="margin-right: 10px;
-    min-width: 100px;" routerLink="/users/">Cancel</button>
+    min-width: 100px;" routerLink="/onboarding/lipalater-users/">Cancel</button>
                     <button [disabled]="userFormAdd.invalid" class="btn btn-success " type="submit"
                       style="min-width: 100px;">Submit</button>
                   </div>
