--- a/src/app/pages/internal-users/update/update.component.html
+++ b/src/app/pages/internal-users/update/update.component.html
@@ -28,7 +28,7 @@
             <div class="col-md-1"></div>
             <h4 class="col-md-11">Updating Internal User</h4>
           </div>
-          <hr>
+
           <div class="row">
 
 
@@ -211,7 +211,7 @@
                       <div class="col-sm-7">
                         <div class="float-right ">
                           <button class="btn btn-danger " type="cancel" style="margin-right: 10px;
-    min-width: 100px;" routerLink="/users/">Cancel</button>
+    min-width: 100px;" routerLink="/onboarding/lipalater-users/">Cancel</button>
                           <button [disabled]="userFormEdit.invalid" class="btn btn-success " type="submit"
                             style="min-width: 100px;">Submit</button>
                         </div>
