--- a/src/app/pages/onboarding-dashboard/onboarding-dashboard.component.html
+++ b/src/app/pages/onboarding-dashboard/onboarding-dashboard.component.html
@@ -3,8 +3,8 @@
 
     <div class="row partner-graph">
 
-      <div class="col-sm-6"> <canvas id="lineChart"></canvas></div>
-      <div class="col-sm-6"> <canvas id="lineChart2"></canvas></div>
+      <div class="col-sm-6"> <canvas #lineChart3>{{ chart3 }}</canvas></div>
+      <div class="col-sm-6"> <canvas #lineChart4>{{ chart4 }}</canvas></div>
     </div>
   </div>
 </div>
@@ -23,7 +23,7 @@
       <div class="row mb-3"
         *ngIf="currentUser.user.role == 'Lipalater admin' || currentUser.user.role == 'Lipalater Super admin'">
 
-        <a routerLink="/partners" class="col-xl-3 col-sm-6 py-2 custom-card">
+        <a routerLink="/onboarding/partners" class="col-xl-3 col-sm-6 py-2 custom-card">
           <div class="card bg-success text-white h-100">
             <div class="card-body bg-success">
               <div class="rotate">
@@ -34,7 +34,7 @@
             </div>
           </div>
         </a>
-        <a routerLink="/stores" class="col-xl-3 col-sm-6 py-2 custom-card">
+        <a routerLink="/onboarding/stores" class="col-xl-3 col-sm-6 py-2 custom-card">
           <div class="card text-white bg-primary h-100">
             <div class="card-body bg-primary">
               <div class="rotate">
@@ -45,7 +45,7 @@
             </div>
           </div>
         </a>
-        <a routerLink="/users" class="col-xl-3 col-sm-6 py-2 custom-card">
+        <a routerLink="/onboarding/users" class="col-xl-3 col-sm-6 py-2 custom-card">
           <div class="card text-white bg-info h-100">
             <div class="card-body bg-info">
               <div class="rotate">
@@ -56,7 +56,7 @@
             </div>
           </div>
         </a>
-        <a routerLink="/lipalater-users" class="col-xl-3 col-sm-6 py-2 custom-card">
+        <a routerLink="/onboarding/lipalater-users" class="col-xl-3 col-sm-6 py-2 custom-card">
 
           <div class="card text-white bg-dark h-100">
             <div class="card-body">
@@ -75,70 +75,13 @@
     </div>
   </div>
 </div>
-<!-- <div class="box box-primary">
-  <div class="box-body">
-
-    <div class="row mb-3"
-      *ngIf="currentUser.user.role == 'Lipalater admin' || currentUser.user.role == 'Lipalater Super admin' || currentUser.user.role == 'Store admin'">
-      <a routerLink="/released" class="col-xl-3 col-sm-6 py-2 custom-card">
-        <div class="card bg-success text-white h-100">
-          <div class="card-body bg-success">
-            <div class="rotate">
-              <i class="fa fa-user fa-4x"></i>
-            </div>
-            <h6 class="text-uppercase">Items Picked</h6>
-            <h1 class="display-4">{{collected_count}}</h1>
-          </div>
-        </div>
-      </a>
-      <a routerLink="/released" class="col-xl-3 col-sm-6 py-2 custom-card">
-        <div class="card text-white bg-danger h-100">
-          <div class="card-body bg-danger">
-            <div class="rotate">
-              <i class="fa fa-list fa-4x"></i>
-            </div>
-            <h6 class="text-uppercase">Value Picked</h6>
-            <h1 class="display-4">{{collected_value}}</h1>
-          </div>
-        </div>
-      </a>
-      <a routerLink="/pending" class="col-xl-3 col-sm-6 py-2 custom-card">
-        <div class="card text-white bg-info h-100">
-          <div class="card-body bg-info">
-            <div class="rotate">
-              <i class="fa fa-twitter fa-4x"></i>
-            </div>
-            <h6 class="text-uppercase">Items Pending Pickup</h6>
-            <h1 class="display-4">{{pending_count}}</h1>
-          </div>
-        </div>
-      </a>
-      <a routerLink="/pending" class="col-xl-3 col-sm-6 py-2 custom-card">
-        <div class="card text-white bg-warning h-100">
-          <div class="card-body">
-            <div class="rotate">
-              <i class="fa fa-share fa-4x"></i>
-            </div>
-            <h6 class="text-uppercase">Value Pending Pickup</h6>
-            <h1 class="display-4">{{pending_value}}</h1>
-          </div>
-        </div>
-      </a>
-    </div>
-
-  </div>
-</div> -->
-
-
-
-
-<!--
 
 <div class="row">
+
   <div class="col-sm-6">
     <div class="box box-primary">
       <div class="box-body">
-        <div class="row mb-3" *ngIf="partners.length > 0">
+        <div class="row mb-3" *ngIf="partnersdata.length > 0">
           <span class="sidebar-header">
             Recently Added Partners
           </span>
@@ -146,66 +89,25 @@
             <thead>
               <tr>
 
-                <th>Partners</th>
-                <th>Location</th>
-                <th>TIme Added</th>
+                <th></th>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Mobile</th>
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let item of partners; let i = index" id={{item.id}}>
-
+              <tr *ngFor="let item of partnersdata; let i = index" id={{item.id}}>
+                <td>{{i+1}}</td>
                 <td>{{item.name}}</td>
-                <td>{{item.location}} </td>
-
-                <td>{{item.created_at | date: 'medium'}}</td>
-
+                <td>{{item.email}}</td>
+                <td>{{item.mobile}}</td>
               </tr>
 
 
             </tbody>
           </table>
         </div>
-        <div class="row mb-3" *ngIf="pending.length == 0">
-          <div>
-            <div class="alert alert-lg alert-warning">No data available</div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="col-sm-6">
-    <div class="box box-primary">
-      <div class="box-body">
-        <div class="row mb-3" *ngIf="pending.length > 0">
-          <span class="sidebar-header">
-            Recently Added Partners
-          </span>
-          <table class="table table-hover">
-            <thead>
-              <tr>
-
-                <th>Item</th>
-                <th>Customer</th>
-
-                <th>Store</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let item of pending; let i = index" id={{item.id}}>
-
-                <td>{{item.item_description}}</td>
-                <td>{{item.customer_names}} </td>
-
-                <td>{{item.store}}</td>
-
-              </tr>
-
-
-            </tbody>
-          </table>
-        </div>
-        <div class="row mb-3" *ngIf="pending.length == 0">
+        <div class="row mb-3" *ngIf="partnersdata.length == 0">
           <div>
             <div class="alert alert-lg alert-warning">No data available</div>
           </div>
@@ -216,74 +118,29 @@
   <div class="col-sm-6">
     <div class="box box-primary">
       <div class="box-body">
-        <div class="row mb-3" *ngIf="pending.length > 0">
+        <div class="row mb-3" *ngIf="storesdata.length > 0">
           <span class="sidebar-header">
-            Recently Added Partners
+            Recently Added Stores
           </span>
           <table class="table table-hover">
             <thead>
               <tr>
-
-                <th>Item</th>
-                <th>Customer</th>
-
-                <th>Store</th>
+                <th>Name</th>
+                <th>Partner</th>
+                <th>Manager</th>
+                <th>Manager Mobile</th>
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let item of pending; let i = index" id={{item.id}}>
-
-                <td>{{item.item_description}}</td>
-                <td>{{item.customer_names}} </td>
-
-                <td>{{item.store}}</td>
-
-              </tr>
-
-
+              <tr *ngFor="let item of storesdata; let i = index" id="{{item.id}}">
+                <td>{{item.name}}</td>
+                <td>{{item.partner.name}}</td>
+                <td>{{item.manager}}</td>
+                <td>{{item.manager_phone}}</td>
             </tbody>
           </table>
         </div>
-        <div class="row mb-3" *ngIf="pending.length == 0">
-          <div>
-            <div class="alert alert-lg alert-warning">No data available</div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-6">
-    <div class="box box-primary">
-      <div class="box-body">
-        <div class="row mb-3" *ngIf="pending.length > 0">
-          <span class="sidebar-header">
-            Recently Added Partners
-          </span>
-          <table class="table table-hover">
-            <thead>
-              <tr>
-
-                <th>Item</th>
-                <th>Customer</th>
-
-                <th>Store</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let item of pending; let i = index" id={{item.id}}>
-
-                <td>{{item.item_description}}</td>
-                <td>{{item.customer_names}} </td>
-
-                <td>{{item.store}}</td>
-
-              </tr>
-
-
-            </tbody>
-          </table>
-        </div>
-        <div class="row mb-3" *ngIf="pending.length == 0">
+        <div class="row mb-3" *ngIf="storesdata.length == 0">
           <div>
             <div class="alert alert-lg alert-warning">No data available</div>
           </div>
@@ -294,4 +151,3 @@
 
 
 </div>
- -->
