--- a/src/app/pages/sales-dashboard/sales-dashboard.component.html
+++ b/src/app/pages/sales-dashboard/sales-dashboard.component.html
@@ -2,80 +2,14 @@
   <div class="box-body">
     <div class="row partner-graph">
 
-      <div class="col-sm-6"> <canvas #lineChart5>{{ chart5 }}</canvas></div>
-      <div class="col-sm-6"> <canvas #lineChart6>{{ chart6 }}</canvas></div>
+      <div class="col-sm-6"> <canvas #lineChart>{{ chart }}</canvas></div>
+      <div class="col-sm-6"> <canvas #lineChart2>{{ chart2 }}</canvas></div>
+      <!-- <div *ngIf="!loadedSalesByNumber" class="col-sm-6"> <img src="../../../assets/loading.gif" /> loading chart</div>
+      <div *ngIf="loadedSalesByValue" class="col-sm-6"> <canvas id="lineChart2"></canvas></div>
+      <div *ngIf="!loadedSalesByValue" class="col-sm-6"> <img src="../../../assets/loading.gif" /> loading chart</div> -->
     </div>
   </div>
 </div>
-<div class="box box-primary">
-  <div class="box-body">
-
-
-    <div class="row mb-3"
-      *ngIf="currentUser.user.role == 'Lipalater admin' || currentUser.user.role == 'Lipalater Super admin'">
-      <span class="dash-header">
-        Onboarding Stats
-      </span>
-    </div>
-
-
-
-    <div class="row mb-3"
-      *ngIf="loadedOnboarding && (currentUser.user.role == 'Lipalater admin' || currentUser.user.role == 'Lipalater Super admin')">
-
-      <a routerLink="/onboarding/partners" class="col-xl-3 col-sm-6 py-2 custom-card">
-        <div class="card bg-success text-white h-100">
-          <div class="card-body bg-success">
-            <div class="rotate">
-              <i class="fa fa-users fa-4x"></i>
-            </div>
-            <h6 class="text-uppercase">Partners</h6>
-            <h1 class="display-4">{{partners}}</h1>
-          </div>
-        </div>
-      </a>
-      <a routerLink="/onboarding/stores" class="col-xl-3 col-sm-6 py-2 custom-card">
-        <div class="card text-white bg-primary h-100">
-          <div class="card-body bg-primary">
-            <div class="rotate">
-              <i class="fa fa-list fa-4x"></i>
-            </div>
-            <h6 class="text-uppercase">Stores</h6>
-            <h1 class="display-4">{{stores}}</h1>
-          </div>
-        </div>
-      </a>
-      <a routerLink="/onboarding/users" class="col-xl-3 col-sm-6 py-2 custom-card">
-        <div class="card text-white bg-info h-100">
-          <div class="card-body bg-info">
-            <div class="rotate">
-              <i class="fa fa-users fa-4x"></i>
-            </div>
-            <h6 class="text-uppercase">Store Users</h6>
-            <h1 class="display-4">{{store_users}}</h1>
-          </div>
-        </div>
-      </a>
-      <a routerLink="/onboarding/lipalater-users" class="col-xl-3 col-sm-6 py-2 custom-card">
-
-        <div class="card text-white bg-dark h-100">
-          <div class="card-body">
-            <div class="rotate">
-              <i class="fa fa-users fa-4x"></i>
-            </div>
-            <h6 class="text-uppercase">Internal Users</h6>
-            <h1 class="display-4">{{internal_users}}</h1>
-          </div>
-        </div>
-
-      </a>
-    </div>
-    <div class="row mb-3" *ngIf="!loadedOnboarding">
-      <img src="../../../assets/loading.gif" /> Loading Onboarding Stats
-    </div>
-  </div>
-</div>
-
 <div class="box box-primary">
   <div class="box-body">
     <div class="row mb-3"
