--- a/src/app/pages/sales-menu/sales-menu.component.html
+++ b/src/app/pages/sales-menu/sales-menu.component.html
@@ -4,33 +4,34 @@
       <div class="box-body">
 
         <nav id="sidebar" *ngIf="currentUser">
-          <div class="sidebar-header"> Onboarding Menu
+          <div class="sidebar-header"> Sales Menu
           </div>
           <div class="container demo d-none d-md-block"></div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
               <a class="nav-link sales-link" routerLink="dashboard">
-                Onboarding
+                Sales
                 <p>stats</p>
               </a>
             </li>
             <li class="list-group-item">
-              <a class="nav-link sales-link" routerLink="partners">
-                Partners<p>{{partners}}</p>
+              <a class="nav-link sales-link" routerLink="pending">
+                Pending<p>{{pending_count}}</p>
               </a>
             </li>
             <li class="list-group-item">
-              <a class="nav-link sales-link" routerLink="stores">Stores<p>{{stores}}</p>
+              <a class="nav-link sales-link" routerLink="released">Collected<p>{{collected_count}}</p>
               </a>
             </li>
             <li class="list-group-item">
-              <a class="nav-link released-link" routerLink="users">Store Users
-                <p>{{store_users}}</p>
+              <a class="nav-link released-link" routerLink="sales">All Stats
+                <p>{{pending_count + collected_count}}</p>
               </a>
             </li>
-            <li class="list-group-item" *ngIf="currentUser.user.role == 'Lipalater Super admin'">
-              <a class=" nav-link released-link" routerLink="lipalater-users">Internal Users
-                <p>{{internal_users}}</p>
+            <li class="list-group-item"
+              *ngIf="currentUser.user.role == 'Lipalater Super admin' || currentUser.user.role == 'Lipalater admin'">
+              <a class=" nav-link released-link" routerLink="cancelled">Cancelled
+                <p>{{cancelled_count}}</p>
               </a>
             </li>
           </ul>
