--- a/src/app/pages/stores/store.component.html
+++ b/src/app/pages/stores/store.component.html
@@ -6,7 +6,7 @@
 
       <div class="widget-controls row">
         <div class="col-sm-6">
-          <a class="btn btn-info btn-sm mb-1" routerLink="/stores/create"><i class="fa fa-plus"></i> Add Store</a>
+          <a class="btn btn-info btn-md mb-1" routerLink="create"><i class="fa fa-plus"></i> Add Store</a>
 
         </div>
         <div class="col-sm-2"></div>
