--- a/src/app/pages/stores/update/update.component.html
+++ b/src/app/pages/stores/update/update.component.html
@@ -28,7 +28,7 @@
             <div class="col-md-1"></div>
             <h4 class="col-md-11">Updating Store</h4>
           </div>
-          <hr>
+
           <div class="row">
 
 
@@ -586,7 +586,7 @@
                   <div class="float-right ">
 
                     <button class="btn btn-danger " type="cancel" style="margin-right: 10px;
-                      min-width: 100px;" routerLink="/stores/">Cancel</button>
+                      min-width: 100px;" routerLink="/onboarding/stores/">Cancel</button>
                     <button [disabled]="storeFormEdit.invalid" class="btn btn-success " type="submit"
                       style="min-width: 100px;">Submit</button>
                   </div>
