--- a/src/app/pages/users/update/update.component.html
+++ b/src/app/pages/users/update/update.component.html
@@ -28,7 +28,7 @@
             <div class="col-md-1"></div>
             <h4 class="col-md-11">Updating Store User</h4>
           </div>
-          <hr>
+
           <div class="row">
 
 
@@ -91,17 +91,7 @@
                           Name should be at most 45 characters</small>
                       </div>
                     </div>
-                    <!---- <div class="row form-group">
 
-                            <label class="control-label col-sm-3" for="inputName">User Name</label>
-                                                         <div class="col-sm-7">
-                            <input formControlName="userName" class="form-control validation-field" placeholder="User Name" type="text">
-                            <small class="text-danger" *ngIf="userFormEdit.get('userName').touched && userFormEdit.get('userName').hasError('required')">User Name is required</small>
-                            <small class="text-danger" *ngIf="userFormEdit.get('userName').touched && userFormEdit.get('userName').hasError('pattern')">Invalid User Name</small>
-                            <small class="text-danger" *ngIf="userFormEdit.get('userName').touched && userFormEdit.get('userName').hasError('minlength')">Last Name should be at least 3 characters</small>
-                            <small class="text-danger" *ngIf="userFormEdit.get('userName').touched && userFormEdit.get('userName').hasError('maxlength')">Last Name should be at most 45 characters</small>
-                        </div>
-                    </div>-->
                     <div class="row form-group">
 
                       <label class="control-label col-sm-3" for="inputName">Email</label>
@@ -132,20 +122,6 @@
                           Number</small>
                       </div>
                     </div>
-                    <!--<div class="row form-group">
-
-                <label class="control-label col-sm-3" for="inputName">Phone Number</label>
-                <div class="col-sm-7">
-                  <input formControlName="mobile" class="form-control validation-field" placeholder="Phone Number"
-                    type="text">
-                  <small class="text-danger"
-                    *ngIf="userFormEdit.get('mobile').touched && userFormEdit.get('mobile').hasError('required')">Phone
-                    Number is required</small>
-                  <small class="text-danger"
-                    *ngIf="userFormEdit.get('mobile').touched && userFormEdit.get('mobile').hasError('pattern')">Format
-                    should be either 2547XXXXXXX or 07XXXXXXXX</small>
-                </div>
-              </div> -->
 
                     <div class="row form-group">
 
@@ -223,7 +199,7 @@
                       <div class="col-sm-7">
                         <div class="float-right ">
                           <button class="btn btn-danger " type="cancel" style="margin-right: 10px;
-    min-width: 100px;" routerLink="/users/">Cancel</button>
+    min-width: 100px;" routerLink="/onboarding/users/">Cancel</button>
                           <button [disabled]="userFormEdit.invalid" class="btn btn-success " type="submit"
                             style="min-width: 100px;">Submit</button>
                         </div>
