--- a/src/app/pages/pending/pending.component.html
+++ b/src/app/pages/pending/pending.component.html
@@ -1,14 +1,9 @@
 <block-ui>
   <div class="box box-primary">
     <div class="box-body">
-      <div class="widget-controls row">
+      <!-- <div class="widget-controls row">
         <div class="col-sm-4">
-          <!-- <a class="btn btn-info btn-sm mb-1" routerLink="/collections/create"><i class="fa fa-user"></i> Customer
-            Pickup</a>
-          &nbsp;&nbsp;&nbsp;
-          <a class="btn btn-info btn-sm mb-1" routerLink="/collections/lipalater"><i class="fa fa-shopping-cart"></i>
-            Lipalater
-            Pickup</a> -->
+
           <a class="btn btn-info btn-md mb-1" (click)="downloadApps()"><i class="fa fa-refresh"></i> Update
             List</a>
 
@@ -25,6 +20,65 @@
             </div>
           </div>
         </div>
+      </div> -->
+
+      <div class="widget-controls row">
+        <div class="col-sm-3">
+          <span class="dash-header"> Items Awaiting Collection</span>
+
+        </div>
+        <div class="col-sm-3">
+          <div class="form-group row">
+            <label class="col-sm-2-text-left">From: </label>
+            <div class="input-group col-sm-10">
+              <input class="form-control" placeholder="yyyy-mm-dd" name="dps" [(ngModel)]="startdate" ngbDatepicker
+                #ds="ngbDatepicker">
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary calendar" (click)="ds.toggle()" type="button"><i
+                    class="fa fa-calendar"></i></button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-2">
+          <div class="form-group row">
+            <label class="col-sm-2-text-left">To: </label>
+            <div class="input-group col-sm-10">
+              <input class="form-control" placeholder="yyyy-mm-dd" name="dpe" [(ngModel)]="enddate" ngbDatepicker
+                #de="ngbDatepicker">
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary calendar" (click)="de.toggle()" type="button"><i
+                    class="fa fa-calendar"></i></button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-3">
+
+          <div class="input-group search-box">
+            <input type="text" [(ngModel)]="searchKey" class="form-control search-input"
+              placeholder="Search this content">
+            <div class="input-group-append">
+              <button class="btn btn-info" type="button" (click)="onSearch()">
+                <i class="fa fa-search"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-sm-1">
+          <div class="input-group-append">
+            <button class="btn btn-info" type="button" (click)="download()">
+              <i class="fa fa-download"></i>
+            </button>
+          </div>
+        </div>
+
+
+
+
+
       </div>
       <span id="responseText"></span>
       <table class="table table-striped  table-sm row-border hover" *ngIf="total_records > 0">
@@ -42,7 +96,7 @@
         </thead>
         <tbody>
           <tr *ngFor="let item of data; let i = index" id={{item.id}}>
-            <td>{{i+1}}</td>
+            <td>{{((current_page-1)*25)+i+1}}</td>
             <td>{{item.customer_names}}</td>
             <td>{{item.item_description}}</td>
             <td>{{(item.pick_up_type =='store_pick_up')?'customer pick up':'lipalater pick up'}}</td>
