--- a/src/app/pages/sales-dashboard/sales-dashboard.component.html
+++ b/src/app/pages/sales-dashboard/sales-dashboard.component.html
@@ -77,7 +77,7 @@
 <div class="row">
   <div class="col-sm-6">
     <div class="box box-primary">
-      <div class="box-body">
+      <div class="box-body" *ngIf="loadedSales">
         <div class="row mb-3">
           <span class="dash-header">
             Recently Added Items
@@ -125,7 +125,7 @@
 
   <div class="col-sm-6">
     <div class="box box-primary">
-      <div class="box-body">
+      <div class="box-body" *ngIf="loadedSales">
 
         <div class="row mb-3">
           <span class="dash-header">
