--- a/src/app/pages/sales/sales.component.html
+++ b/src/app/pages/sales/sales.component.html
@@ -77,7 +77,7 @@
         </thead>
         <tbody>
           <tr *ngFor="let item of data; let i = index" title={{item.id}}>
-            <td>{{i+1}}</td>
+            <td>{{((current_page-1)*25)+i+1}}</td>
             <td>{{item.customer_names}}</td>
             <!-- <td>{{item.customer_id_number}}</td>
             <td>{{item.customer_phone_number}}</td> -->
@@ -101,10 +101,10 @@
         <nav aria-label="..." class="col-sm-6">
           <ul class="pagination">
             <li class="page-item {{(current_page == 1)? 'disabled': ''}}">
-              <a class="page-link" (click)="loadPage(1)" tabindex="-1">First</a>
+              <a class="page-link" (click)="loadPage(1)" title="1">First</a>
             </li>
             <li class="page-item {{(current_page == 1)? 'disabled': ''}}">
-              <a class="page-link" (click)="loadPage(current_page-1)" tabindex="-1">Previous</a>
+              <a class="page-link" (click)="loadPage(current_page-1)" title="{{current_page - 1}}">Previous</a>
             </li>
             <li class="page-item active">
               <a class="page-link">{{current_page}}</a>
@@ -116,10 +116,10 @@
               <li class="page-item"><a class="page-link" href="#">3</a></li> -->
 
             <li class="page-item {{(current_page == total_pages)? 'disabled': ''}}">
-              <a class="page-link" (click)="loadPage(current_page+1)" tabindex="-1">Next</a>
+              <a class="page-link" (click)="loadPage(current_page+1)" title="{{current_page+1}}">Next</a>
             </li>
             <li class="page-item {{(current_page == total_pages)? 'disabled': ''}}">
-              <a class="page-link" (click)="loadPage(total_pages)" tabindex="-1">Last</a>
+              <a class="page-link" (click)="loadPage(total_pages)" title="{{total_pages}}">Last</a>
             </li>
 
           </ul>
