changed sales line graphs to be plain lines without fill color for clarity

--- a/src/app/pages/sales-dashboard/sales-dashboard.component.html
+++ b/src/app/pages/sales-dashboard/sales-dashboard.component.html
@@ -88,8 +88,8 @@
           <table class="table table-hover">
             <thead>
               <tr>
-                <th>Item</th>
                 <th>Customer</th>
+                <th>Item</th>
                 <th>Store</th>
                 <th>Amount</th>
                 <th>Pickup type</th>
@@ -98,14 +98,11 @@
             </thead>
             <tbody>
               <tr *ngFor="let item of pending; let i = index" id={{item.id}}>
-
-                <td>{{item.item_description}}</td>
                 <td>{{item.customer_names}} </td>
-                <!-- <td>{{item.customer_id_number}} </td>
-              <td>{{item.customer_phone_number}}</td> -->
+                <td>{{item.item_description}}</td>
                 <td>{{item.store}}</td>
                 <td>{{item.buying_price}}</td>
-                <td>{{(item.pick_up_type =='store_pick_up')?'customer pick up':'lipalater pick up'}}</td>
+                <td>{{(item.pick_up_type =='store_pick_up')?'customer':'lipalater'}}</td>
                 <td>{{item.created_at | date: 'medium'}}</td>
 
               </tr>
