fixed an issue causing pages to post blank date ranges for search

--- a/src/app/pages/cancelled/cancelled.component.html
+++ b/src/app/pages/cancelled/cancelled.component.html
@@ -24,7 +24,7 @@
 
       <div class="widget-controls row">
         <div class="col-sm-3">
-          <span class="dash-header"> Items Awaiting Collection</span>
+          <span class="dash-header"> Cancelled Items</span>
 
         </div>
         <div class="col-sm-3">
