--- a/src/app/pages/cancelled/cancelled.component.html
+++ b/src/app/pages/cancelled/cancelled.component.html
@@ -69,7 +69,7 @@
 
         <div class="col-sm-1">
           <div class="input-group-append">
-            <button class="btn btn-info" type="button" (click)="download()">
+            <button class="btn btn-info" type="button" (click)="downloadApps()">
               <i class="fa fa-download"></i>
             </button>
           </div>
