--- a/src/app/pages/collections/collections.component.html
+++ b/src/app/pages/collections/collections.component.html
@@ -1,107 +1,35 @@
 <block-ui>
-  <div class="box box-primary">
-    <div class="box-body">
-      <div class=" row">
-        <div class="col-md-3">
-          <p>
-            Click to select pick up option.
-          </p>
-        </div>
-      </div>
-      <!-- <div class="widget-controls row">
-        <div class="col-sm-6">
-          <a class="btn btn-info btn-sm mb-1" routerLink="/collections/create"><i class="fa fa-user"></i> Customer
-            Pickup</a>
-          &nbsp;&nbsp;&nbsp;
-          <a class="btn btn-info btn-sm mb-1" routerLink="/collections/lipalater"><i class="fa fa-shopping-cart"></i>
-            Lipalater
-            Pickup</a>
+  <div class="row">
+    <div class="col-sm-2 onboarding-menu">
+      <div class="box box-primary">
+        <div class="box-body">
 
-        </div>
-        <div class="col-sm-2"></div>
-        <div class="col-sm-4">
-          <div class="input-group search-box">
-            <input type="text" [(ngModel)]="searchKey" class="form-control search-input"
-              placeholder="Search this content">
-            <div class="input-group-append">
-              <button class="btn btn-info" type="button" (click)="onSearch()">
-                <i class="fa fa-search"></i>
-              </button>
+          <nav id="sidebar">
+            <div class="sidebar-header"> Pick Up Menu
             </div>
-          </div>
-        </div>
-      </div> -->
-      <span id="responseText"></span>
+            <div class="container demo d-none d-md-block"></div>
+            <ul class="list-group list-group-flush">
 
-      <div class="row">
-        <div class="col-md-3">
-          <a class="btn btn-info btn-lg btn-block btn-huge" routerLink="/collections/create"><i class="fa fa-user"></i>
-            Customer
-            Pickup</a>
-        </div>
-        <div class="col-md-3">
-          <a class="btn btn-info btn-lg btn-block btn-huge" routerLink="/collections/lipalater"><i
-              class="fa fa-shopping-cart"></i>
-            Lipalater
-            Pickup</a>
+              <li class="list-group-item">
+                <a class="nav-link sales-link" routerLink="create">
+                  Customer Pickup
+                </a>
+              </li>
+              <li class="list-group-item">
+                <a class="nav-link sales-link" routerLink="lipalater">Lipalater Pickup
+                </a>
+              </li>
+              <li class="list-group-item">
+                <a class="nav-link sales-link" routerLink="pending">Pending Items </a>
+              </li>
+            </ul>
+          </nav>
         </div>
       </div>
-      <!-- <table class="table table-striped  table-sm row-border hover" *ngIf="total_records > 0">
-        <thead>
-          <tr>
-            <th></th>
-            <th>Customer</th>
-            <th>Item</th>
-            <th>Collected By</th>
-            <th>Store</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let item of data; let i = index" title={{item.id}}>
-            <td>{{i+1}}</td>
-            <td>{{item.customer_names}} Id: {{item.customer_id_number}} Phone {{item.customer_phone_number}}</td>
-            <td>{{item.item}}</td>
-            <td>{{item.collected_by_name}} Id: {{item.collected_by_id_number}}</td>
-            <td>{{item.store}}</td>
-          </tr>
-        </tbody>
-
-      </table>
-
-      <div class="row" *ngIf="total_records > 0">
-
-        <div class="col-sm-6">
-          <span>showing {{((current_page-1)*page_size) + 1}} to {{current_page*page_size}} of {{total_records}}</span>
-        </div>
-
-        <nav aria-label="..." class="col-sm-6">
-          <ul class="pagination">
-            <li class="page-item {{(current_page == 1)? 'disabled': ''}}">
-              <a class="page-link" (click)="loadPage(1)" tabindex="-1">First</a>
-            </li>
-            <li class="page-item {{(current_page == 1)? 'disabled': ''}}">
-              <a class="page-link" (click)="loadPage(current_page-1)" tabindex="-1">Previous</a>
-            </li>
-            <li class="page-item active">
-              <a class="page-link">{{current_page}}</a>
-            </li>
-
-
-      <li class="page-item {{(current_page == total_pages)? 'disabled': ''}}">
-        <a class="page-link" (click)="loadPage(current_page+1)" tabindex="-1">Next</a>
-      </li>
-      <li class="page-item {{(current_page == total_pages)? 'disabled': ''}}">
-        <a class="page-link" (click)="loadPage(total_pages)" tabindex="-1">Last</a>
-      </li>
-
-      </ul>
-      </nav>
     </div>
-
-    <div *ngIf="total_records == 0">
-      <div class="alert alert-lg alert-warning">No data available</div>
-    </div> -->
-
+    <div class="col-sm-10">
+      <router-outlet></router-outlet>
     </div>
   </div>
+
 </block-ui>
